# compliance-trestle-mcp

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  pyproject.toml  server.json
.github/workflows/: publish.yml
docs/: architecture.md  command-spec-template.md  command-specs-development.md
docs/command-specs/: import.md  init.md
docs/command-specs/author/: catalog-generate.md  profile-assemble.md  profile-generate.md  profile-resolve.md
docs/command-specs/task/: csv-to-oscal-cd.md
docs/images/: architecture.drawio
docs/release/: mcp-registry.md
tests/data/: test-catalog.json  test-profile.json
tests/data/task/csv-to-oscal-cd/: components.csv  config.ini  validation-components.csv
tests/e2e/: __init__.py  test_mcp_server.py
tests/unit/: __init__.py
tests/unit/libs/: __init__.py  test_trestle.py
tests/unit/services/: test_import_model.py  test_init.py
tests/unit/services/author/: test_catalog_generate.py  test_profile_assemble.py  test_profile_generate.py  test_profile_resolve.py
tests/unit/services/task/: test_csv_to_oscal_cd.py
trestle_mcp/: __init__.py  __main__.py  main.py
trestle_mcp/libs/: __init__.py  trestle.py
trestle_mcp/services/: __init__.py  import_.py  init.py
trestle_mcp/services/author/: __init__.py  catalog_generate.py  profile_assemble.py  profile_generate.py  profile_resolve.py
trestle_mcp/services/task/: __init__.py  csv_to_oscal_cd.py
